--- a/app/src/main/res/layout/ml_device_include_three_in_one.xml
+++ b/app/src/main/res/layout/ml_device_include_three_in_one.xml
@@ -171,6 +171,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_xuetang"
             android:layout_width="550dp"
             android:layout_height="180dp"
             android:scaleType="fitXY"
